[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "finance-analytics"
version = "0.1.0"
description = "Система финансовой аналитики"
authors = ["Денис"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
python-dotenv = "^0.19.0"
workalendar = "^18.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^4.0.0"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.910"
types-python-dateutil = "^2.8.0"

[tool.black]
line-length = 119
target-version = ['py38']
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 119
known_third_party = ["pytest", "pandas"]
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
exclude = "(venv|.venv)/"

[tool.flake8]
max-line-length = 119
exclude = ".git, __pycache__, .venv, venv"
ignore = "E203, W503, E501"



